fix navbar toggler color on mobile devices

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -129,7 +129,8 @@ h6,
     .navbar .navbar-nav {
         margin-top: 10px;
         border-top: 1px solid rgba(0, 0, 0, .07);
-        background: #FFFFFF;
+        background: var(--dark);
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     }
 
     .navbar .navbar-nav .nav-link {
